# com.math.Graphs

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  com.math.Graphs.json  meson.build  oop.my.graphs.json
.github/workflows/: main.yml
data/: com.math.Graphs.desktop.in  com.math.Graphs.gschema.xml  com.math.Graphs.metainfo.xml.in  meson.build  oop.my.graphs.desktop.in  oop.my.graphs.gschema.xml  oop.my.graphs.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: app-init.c.in  area.js  area.ui  com.math.Graphs.data.gresource.xml  com.math.Graphs.src.gresource.xml  custom-color-dialog.js  custom-color-dialog.ui  formula.ui  graph-color-button.js  graph-color-button.ui  graph-color-pick-button.ui  graphs.data.gresource.xml  items-base.js  main.js  meson.build  mirror.js  oop.my.graphs.data.gresource.xml  oop.my.graphs.src.gresource.xml  parse-formula.js  preferences-dialog.js  primitives.js  sidebar.js  sidebar.ui  style.css  style.js  window.js  window.ui
src/init/: app-init.c  app-init.h.in  file-ops.c  file-ops.h  fonts.conf  meson.build
test/: test.js
